--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Fixed Top Navbar Example for Bootstrap</title>
+    <title>Pipeline for Maya</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -43,30 +43,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Pipeline</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#Version_20">Version</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li><a href="../navbar-static-top/">Static top</a></li>
-            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="#features">Features</a></li>
+            <li><a href="#version">Version</a></li>
+            <li><a href="#installation">Installation</a></li>
+            <li><a href="http://liorbenhorin.github.io/Pipeline_help/">Documantation</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -78,50 +62,43 @@
       <div class="jumbotron">
         <p><img src="images/logo.png" alt="logo" style="width:128px; height:128px"></p>
         <h1>Pipeline</h1>
-        <p>Projects manager for Maya</p>
-        <p>
-          <a class="btn btn-lg btn-success" href="../../components/#navbar" role="button">Download v1.0.0</a>
-        </p>
+        <p>Pipeline is a projects manager for Maya</p>
+        <p><a id="features"></a></p>
+        <p><a class="btn btn-lg btn-success" href="https://github.com/liorbenhorin/pipeline/zipball/master" role="button">Download Pipeline</a></p>
+
       </div>
 
     </div> <!-- /container -->
 
     <div class="container">
-
-      <h1><a id="Dillinger_0"></a>Dillinger</h1>
-      <p>Dillinger is a cloud-enabled, mobile-ready, offline-storage, AngularJS powered HTML5 Markdown editor.</p>
+      <br>
+      <br>
+      <h1><mark>Features</mark></h1>
+      <br>
+      <blockquote><p>Pipeline is a Maya projects manager tool inspeired by openpipeline.<br>
+        It was crafted with all my experience in animaiton productions as TD for the past few years.<br>
+        After getting used to Pipeline, you will find it much easier to manage your own projects and animation teams.
+      </blockquote></p>
       <ul>
-      <li>Type some Markdown on the left</li>
-      <li>See HTML in the right</li>
-      <li>Magic</li>
+      <li>Manage all your projects and Maya files from within Maya</li>
+      <li>Takes care of versions and naming conventions so nothing gets lost</li>
+      <li>Asset publishing with versions management</li>
+      <li>Thumbnails</li>
+      <li>Animation mode with published assets bank</li>
+      <li>Collaborate on projects on the cloud, shared drives and multiple platforms</li>
+      <li>Designed especially for creating short films and commercials by small teams</li>
+      <li>Projects have users with permissions, so they are protected from technophobe-animators (not included in the beta)</li>
       </ul>
-      <p>Markdown is a lightweight markup language based on the formatting conventions that people naturally use in email.  As <a href="http://daringfireball.net">John Gruber</a> writes on the <a href="http://daringfireball.net/projects/markdown/">Markdown site</a></p>
-      <blockquote>
-      <p>The overriding design goal for Markdown’s
-      formatting syntax is to make it as readable
-      as possible. The idea is that a
-      Markdown-formatted document should be
-      publishable as-is, as plain text, without
-      looking like it’s been marked up with tags
-      or formatting instructions.</p>
-      </blockquote>
-      <a id="Version_20"></a>
-      <p>This text you see here is <em>actually</em> written in Markdown! To get a feel for Markdown’s syntax, type some text into the left window and watch the results in the right.</p>
-
-      <h3><a id="Version_21"></a>Version</h3>
-      <p>3.2.7</p>
-      <h3><a id="Tech_23"></a>Tech</h3>
-      <p>Dillinger uses a number of open source projects to work properly:</p>
+      <br>
+      <br>
+      <a id="version"></a>
+      <h3><mark>Beta Version</mark></h3>
+      <br>
+      <p>Pipeline beta is <u>free for Non-Commercial</u> use!</p>
       <ul>
-      <li><a href="http://angularjs.org">AngularJS</a> - HTML enhanced for web apps!</li>
-      <li><a href="http://ace.ajax.org">Ace Editor</a> - awesome web-based text editor</li>
-      <li><a href="https://github.com/chjj/marked">Marked</a> - a super fast port of Markdown to JavaScript</li>
-      <li><a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> - great UI boilerplate for modern web apps</li>
-      <li><a href="http://nodejs.org">node.js</a> - evented I/O for the backend</li>
-      <li><a href="http://expressjs.com">Express</a> - fast node.js network app framework <a href="http://twitter.com/tjholowaychuk">@tjholowaychuk</a></li>
-      <li><a href="http://gulpjs.com">Gulp</a> - the streaming build system</li>
-      <li><a href="https://github.com/madrobby/keymaster">keymaster.js</a> - awesome keyboard handler lib by <a href="http://twitter.com/thomasfuchs">@thomasfuchs</a></li>
-      <li><a href="http://jquery.com">jQuery</a> - duh</li>
+      <li>Things can go wrong</li>
+      <li>Always backup you work</li>
+      <li>You allow the program to collect usage statistics</li>
       </ul>
       <p>And of course Dillinger itself is open source with a <a href="https://github.com/joemccann/dillinger">public repository</a>
       on GitHub.</p>
