--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="jumbotron">
         <img class="img-responsive" src="images/pipeline_combine.png" alt="logo" ></p>
         <h1>Pipeline</h1>
-        <p>Pipeline is a projects manager for Maya</p>
+        <p>Pipeline is a simple projects manager for Maya</p>
         <p><a class="btn btn-lg btn-primary" href="https://github.com/liorbenhorin/pipeline/zipball/master" role="button">Download Pipeline 1.0.0</a></p>
       </div>
     </div> <!-- /container -->
