--- a/index.html
+++ b/index.html
@@ -77,17 +77,26 @@
         from student shorts to meduim teams working on commercial projects.
       </p>
 
-      <ul>
-      <li>Manage all your projects and Maya files from within Maya</li>
-      <li>Takes care of versions and naming conventions so nothing gets lost</li>
-      <li>Asset publishing with versions management</li>
-      <li>Thumbnails</li>
-      <li>Animation mode with published assets bank</li>
-      <li>Collaborate on projects on the cloud, shared drives and multiple platforms</li>
-      <li>Designed especially for creating short films and commercials by small teams</li>
-      <li>Embeded nativly into Maya's interface</li>
-      <li>Projects have users with permissions, so they are protected from technophobe-animators (not included in the beta)</li>
-      </ul>
+      <dl>
+        <dt>Simplex</dt>
+          <ul>
+            <li>Pipeline takes care of versions, nameing convention and folder structure, and nothing gets lost</li>
+            <li>Asset bank for quick referecing into animation scenes</li>
+            <li>Published assets with versions for easy recoveries</li>
+          </ul>
+        <dt>Straight forward</dt>
+          <ul>
+            <li>Embeded nativly into Maya's interface</li>
+            <li>Manage all you projects without leaving Maya</li>
+          </ul>
+        </dt>
+        <dt>Collaborative</dt>
+          <ul>
+            <li>Work on projects via file sharing services like Dropbox</li>
+            <li>Users with premissions keep assets secure from less-technical animators</li>
+            <li>OSX / Windows support</li>
+          </ul>
+      </dl>
 
       <p><a id="version"></a><h3><mark>Beta Version</mark></h3></p>
       <p class="lead">Pipeline beta is free for non-commercial use!</p>
