dnld-button-edition

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#features">Features</a></li>
+            <li><a href="#features">Features</a></li>
             <li><a href="#version">Version</a></li>
             <li><a href="#installation">Installation</a></li>
             <li><a href="http://liorbenhorin.github.io/Pipeline_help/">Documantation</a></li>
@@ -65,7 +65,7 @@
         <img class="img-responsive" src="images/pipeline_combine.png" alt="logo" ></p>
         <h1>Pipeline</h1>
         <p>Pipeline is a simple projects manager for Maya</p>
-        <p><a class="btn btn-lg btn-primary" href="https://github.com/liorbenhorin/pipeline/zipball/master" role="button">Download Pipeline 1.0.0</a></p>
+        <p><a class="btn btn-lg btn-primary" href="https://github.com/liorbenhorin/pipeline/zipball/master" role="button">Download Pipeline 1.0.0<br><small>Free for non-commercial use</small></a></p>
       </div>
     </div> <!-- /container -->
 
@@ -93,20 +93,19 @@
         <dt>Collaborative</dt>
           <ul>
             <li>Work on projects via file sharing services like Dropbox</li>
-            <li>Users with premissions keep assets secure from less-technical animators</li>
+            <li>Users with premissions keep assets safe from less-technical animators</li>
             <li>OSX / Windows support</li>
           </ul>
       </dl>
 
-      <p><a id="version"></a><h3><mark>Beta Version</mark></h3></p>
-      <p class="lead">Pipeline beta is free for non-commercial use!</p>
+      <p><a id="version"></a><h4><mark>Beta Version</mark></h4></p>
+      <p class="lead">Pipeline beta is now free for non-commercial use!</p>
       <ul>
-      <li>Things can go wrong</li>
-      <li>Always backup you work</li>
-      <li>You allow the program to collect usage statistics</li>
+      <li>Things can go wrong so backup your work</li>
+      <li>You allow the pipeline to collect usage data</li>
       </ul>
 
-      <h3><a id="installation"></a><p><mark>Installation</mark></p></h3></p>
+      <h4><a id="installation"></a><p><mark>Installation</mark></p></h4></p>
       <p><a herf="#">Pipeline 1.0.0 Beta Maya 2015, 2016 (Win/OSX)</a></p>
       <p>Place the pipeline folder <em>( Make sure it is named 'pipeline')</em> in your maya scripts folder.<br>
          Run the following lines in a python tab in the script editor:</p>
@@ -116,13 +115,13 @@ pipeline.show()</pre>
       </p>
 
       <p></p>
-      <h3><p><mark>Documentation</mark></p></h3></p>
+      <h4><p><mark>Documentation</mark></p></h4></p>
       <p><a herf="http://liorbenhorin.github.io/Pipeline_help/">Visit pipeline online documentation</a></p>
     </div><!-- /container -->
 
     <!-- Begin MailChimp Signup Form -->
     <div class="container">
-    <p class="lead">Sign up to recive new version updates:</p>
+    <p class="lead">Sign up to know when a new version is released:</p>
     <form action="//nnl.us13.list-manage.com/subscribe/post?u=879fb8f252168589edce47432&amp;id=a626001b48" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div class="input-group input-group-lg">
             <input type="email" value="" name="EMAIL" class="form-control email" id="mce-EMAIL" placeholder="email address" required>
