--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
 
       <p><a id="version"></a><h4><mark>Beta Version</mark></h4></p>
       <p class="lead">Pipeline beta is now free for non-commercial use!</p>
-      <ul>
-      <li>Things can go wrong so backup your work</li>
-      <li>You allow the pipeline to collect usage data</li>
-      </ul>
-
+      <p>
+        <ul>
+        <li>Things can go wrong so backup your work</li>
+        <li>You allow the pipeline to collect usage data</li>
+        </ul>
+      </p>
       <h4><a id="installation"></a><p><mark>Installation</mark></p></h4></p>
       <p><a herf="#">Pipeline 1.0.0 Beta Maya 2015, 2016 (Win/OSX)</a></p>
       <p>Place the pipeline folder <em>( Make sure it is named 'pipeline')</em> in your maya scripts folder.<br>
@@ -135,6 +136,32 @@ pipeline.show()</pre>
     </div>
     <!--End mc_embed_signup-->
 
+
+    <div id="disqus_thread"></div>
+    <script>
+    /**
+    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+    */
+
+    var disqus_config = function () {
+    this.page.url = http://pipeline.nnl.tv; // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = "pipeline_thread"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+
+    s.src = '//liorbenhorin.disqus.com/embed.js';
+
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
+
+
     <footer class="footer">
       <!-- Begin footer -->
       <div class="container">
@@ -152,5 +179,8 @@ pipeline.show()</pre>
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
+
+    <script id="dsq-count-scr" src="//liorbenhorin.disqus.com/count.js" async></script>
+
   </body>
 </html>
