--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ pipeline.show()</pre>
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
 
-    s.src = '//liorbenhorin.disqus.com/embed.js';
+    s.src = 'https://liorbenhorin.disqus.com/embed.js';
 
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
