--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ pipeline.show()</pre>
     <!--End mc_embed_signup-->
 
 
-    <div id="disqus_thread"></div>
+    <div class = "container" id="disqus_thread">
     <script>
     /**
     * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -159,7 +159,7 @@ pipeline.show()</pre>
     })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-
+    </div>
 
 
     <footer class="footer">
