--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ pipeline.show()</pre>
     */
 
     var disqus_config = function () {
-    this.page.url = http://pipeline.nnl.tv; // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = https://pipeline.nnl.tv; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = "pipeline_thread"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
 
