--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 
 
-    <div class = "container" id="disqus_thread"></div>
+    <div class = "container" id="disqus_thread"></div><!--/ disqus -->
     <script>
     /**
     * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
