disqus-working-ok

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <li><a href="#version">Version</a></li>
             <li><a href="#installation">Installation</a></li>
             <li><a href="http://liorbenhorin.github.io/Pipeline_help/">Documantation</a></li>
+            <li><a href="#feedback">Feedback</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -120,11 +121,16 @@ pipeline.show()</pre>
       <p></p>
       <h4><p><mark>Documentation</mark></p></h4></p>
       <p><a herf="http://liorbenhorin.github.io/Pipeline_help/">Visit pipeline online documentation</a></p>
+
+
+      <p class="well">If you are interested in using Pipeline for commercial projects, or to create a custom Pipeline for your studio, send me an email to liorbenhorin@gmail.com</p>
+
     </div><!-- /container -->
+
 
     <!-- Begin MailChimp Signup Form -->
     <div class="container">
-    <p class="lead">Sign up to know when a new version is released:</p>
+    <p class="lead">Sign up for release updates:</p>
     <form action="//nnl.us13.list-manage.com/subscribe/post?u=879fb8f252168589edce47432&amp;id=a626001b48" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div class="input-group input-group-lg">
             <input type="email" value="" name="EMAIL" class="form-control email" id="mce-EMAIL" placeholder="email address" required>
@@ -138,7 +144,9 @@ pipeline.show()</pre>
     </div>
     <!--End mc_embed_signup-->
 
-
+    <div id="feedback" class="container">
+    <h4><p><mark>Feedback and requests</mark></p></h4></p>
+    </div>
     <div class = "container" id="disqus_thread"></div><!--/ disqus -->
     <script>
     /**
