jumbotron-bg-image

--- a/index.html
+++ b/index.html
@@ -62,14 +62,20 @@
 
 
 
-    <div class="container">
+
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <img class="img-responsive" src="images/pipeline_combine.png" alt="logo" ></p>
+
+
+        <div class="container">
+
+        <img class="img-responsive" src="images/pipeline_logo.png" alt="logo" width="128px" height="128px"></p>
         <h1>Pipeline</h1>
         <p>Pipeline is a simple projects manager for Maya</p>
         <p><a class="btn btn-lg btn-primary" href="https://github.com/liorbenhorin/pipeline/zipball/master" role="button">Download Pipeline 1.0.0<br><small>Free for non-commercial use</small></a></p>
-      </div>
+          </div>
+
+      
     </div> <!-- /container -->
 
     <div class="container">
@@ -100,7 +106,6 @@
             <li>OSX / Windows support</li>
           </ul>
       </dl>
-
       <p><a id="version"></a><h4><mark>Beta Version</mark></h4></p>
       <p class="lead">Pipeline beta is now free for non-commercial use!</p>
       <p>
