--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
           </button>
           <a class="navbar-brand" href="#">Pipeline</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar" class="navbar-collapse navbar-right collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#features">Features</a></li>
-            <li><a href="#version">Version</a></li>
-            <li><a href="#installation">Installation</a></li>
             <li><a href="http://liorbenhorin.github.io/Pipeline_help/">Documantation</a></li>
             <li><a href="#feedback">Feedback</a></li>
           </ul>
