--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
           <img class="img-responsive" src="images/pipeline_logo.png" alt="logo" width="128px" height="128px"></p>
           <h1>Pipeline</h1>
-          <p>Pipeline is a simple projects manager for Maya</p>
+          <p>A simple projects manager for Maya</p>
           <p><a class="btn btn-lg btn-primary" href="https://github.com/liorbenhorin/pipeline/zipball/master" role="button">Download Pipeline 1.0.0<br><small>Free for non-commercial use</small></a></p>
         </div>
     </div> <!-- /container -->
