--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Pipeline</a>
+          <a class="navbar-brand" href="#"><b>Pipeline</b></a>
         </div>
         <div id="navbar" class="navbar-collapse navbar-right collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://liorbenhorin.github.io/Pipeline_help/">Documantation</a></li>
+            <li><a href="http://liorbenhorin.github.io/Pipeline_help/">Documentation</a></li>
             <li><a href="#feedback">Feedback</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -82,20 +82,20 @@
       <div class="row">
         <div class="col-sm-4">
           <h3>Simple</h3>
-          <p>Pipeline takes care of versions, nameing convention and folder structure, and nothing gets lost</p>
-          <p>Asset bank for quick referecing into animation scenes</p>
-          <p>Published assets with versions for easy recoveries</p>
-        </div>
-        <div class="col-sm-4">
-          <h3>Straight forward</h3>
-          <p>Embeded nativly into Maya's interface</p>
-          <p>Manage all you projects without leaving Maya</p>
+          <p>Pipeline takes care of versions, nameing convention and folder structure, and nothing gets lost.</p>
+          <p>Asset bank for quick referecing into animation scenes.</p>
+          <p>Published assets with versions for easy recoveries.</p>
         </div>
         <div class="col-sm-4">
           <h3>Collaborative</h3>
-          <p>Work on projects via file sharing services like Dropbox</p>
-          <p>Users with premissions keep assets safe from less-technical animators</p>
-          <p>OSX / Windows support</p>
+          <p>Work on projects via file sharing services like Dropbox.</p>
+          <p>Users with premissions keep assets safe from less-technical animators.</p>
+          <p>OSX / Windows support.</p>
+        </div>
+        <div class="col-sm-4">
+          <h3>Straight forward</h3>
+          <p>Embeded nativly into Maya's interface.</p>
+          <p>Manage all you projects without leaving Maya.</p>
         </div>
       </div>
 
@@ -103,8 +103,8 @@
       <a id="version"></a>
       <h2 class="page-header">Beta Version</h2>
       <p class="lead">Pipeline beta is now free for non-commercial use!</p>
-      <p>Things can go wrong so backup your work</p>
-      <p>You allow the pipeline to collect usage data</p>
+      <p>Things can go wrong so backup your work.<br>
+      You allow the pipeline to collect usage data.</p>
 
       <h2 class="page-header"><a id="installation"></a>Installation</h2>
       <p><a herf="#">Pipeline 1.0.0 Beta Maya 2015, 2016 (Win/OSX)</a></p>
@@ -115,34 +115,36 @@
 pipeline.show()</pre>
       </p>
 
-      <p></p>
-      <h4><p>Documentation</p></h4></p>
+
+      <h2 class="page-header">Documentation</h4>
       <p><a herf="http://liorbenhorin.github.io/Pipeline_help/">Visit pipeline online documentation</a></p>
 
 
-      <p class="well">If you are interested in using Pipeline for commercial projects, or to create a custom Pipeline for your studio, send me an email to liorbenhorin@gmail.com</p>
+
 
     </div><!-- /container -->
 
-
-    <!-- Begin MailChimp Signup Form -->
-    <div class="container">
-    <p class="lead">Sign up for release updates:</p>
-    <form action="//nnl.us13.list-manage.com/subscribe/post?u=879fb8f252168589edce47432&amp;id=a626001b48" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div class="input-group input-group-lg">
-            <input type="email" value="" name="EMAIL" class="form-control email" id="mce-EMAIL" placeholder="email address" required>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;"><input type="text" name="b_879fb8f252168589edce47432_a626001b48" tabindex="-1" value=""></div>
-            <span class="input-group-btn">
-                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default">
-            </span>
-        </div>
-    </form>
-    </div>
-    <!--End mc_embed_signup-->
-
     <div id="feedback" class="container">
-    <h4><p>Feedback and requests</p></h4></p>
+      <h2 class="page-header">Feedback and requests</h2></p>
+      <!-- Begin MailChimp Signup Form -->
+
+      <p class="lead">Sign up for release updates:</p>
+      <form action="//nnl.us13.list-manage.com/subscribe/post?u=879fb8f252168589edce47432&amp;id=a626001b48" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div class="input-group input-group-lg">
+              <input type="email" value="" name="EMAIL" class="form-control email" id="mce-EMAIL" placeholder="email address" required>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;"><input type="text" name="b_879fb8f252168589edce47432_a626001b48" tabindex="-1" value=""></div>
+              <span class="input-group-btn">
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default">
+              </span>
+          </div>
+      </form>
+
+      <!--End mc_embed_signup-->
+
+      <p></p>
+      <p>If you are interested in using Pipeline for commercial projects, or to create a custom Pipeline for your studio, email me at liorbenhorin@gmail.com</p>
+
     </div>
     <div class = "container" id="disqus_thread"></div><!--/ disqus -->
     <script>
