--- a/index.html
+++ b/index.html
@@ -98,7 +98,52 @@
           <p>Manage all you projects without leaving Maya.</p>
         </div>
       </div>
+    </div>
+      <div class="container">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+          </ol>
 
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+
+            <div class="item active">
+              <img class="img-responsive" src="images/1.png" alt="">
+            </div>
+
+            <div class="item">
+              <img class="img-responsive" src="images/2.png" alt="" >
+            </div>
+
+            <div class="item">
+              <img class="img-responsive" src="images/3.png" alt="" >
+            </div>
+
+            <div class="item">
+              <img class="img-responsive" src="images/4.png" alt="" >
+            </div>
+
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+
+
+<div class="container pipeline-div-edit" >
 
       <a id="version"></a>
       <h2 class="page-header">Beta Version</h2>
