--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div id="navbar" class="navbar-collapse navbar-right collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://liorbenhorin.github.io/Pipeline_help/">Documentation</a></li>
+            <li><a href="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Documentation</a></li>
             <li><a href="#feedback">Feedback</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -71,8 +71,10 @@
         </div>
     </div> <!-- /container -->
 
+
+
     <div class="container pipeline-div-edit" >
-      <!-- Main component for a projects indoramtion -->
+
       <h2 class="page-header"><p><a id="features"></a>Features</p></h2>
       <p class='lead'>
         Pipeline is a simple and straight forward tool for managing maya projects,<br>
@@ -99,9 +101,10 @@
         </div>
       </div>
     </div>
+    <!--
       <div class="container">
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
+          <
           <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
@@ -109,38 +112,29 @@
             <li data-target="#carousel-example-generic" data-slide-to="3"></li>
           </ol>
 
-          <!-- Wrapper for slides -->
+
           <div class="carousel-inner" role="listbox">
 
             <div class="item active">
-              <img class="img-responsive" src="images/1.png" alt="">
+              <img class="img-responsive" src="images/versions.png" alt="">
             </div>
 
             <div class="item">
-              <img class="img-responsive" src="images/2.png" alt="" >
+              <img class="img-responsive" src="images/assets.png" alt="" >
             </div>
 
             <div class="item">
-              <img class="img-responsive" src="images/3.png" alt="" >
+              <img class="img-responsive" src="images/ref_bank.png" alt="" >
             </div>
 
             <div class="item">
-              <img class="img-responsive" src="images/4.png" alt="" >
+              <img class="img-responsive" src="images/projects.png" alt="" >
             </div>
 
           </div>
 
-          <!-- Controls -->
-          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
         </div>
-      </div>
+      </div> -->
 
 
 <div class="container pipeline-div-edit" >
@@ -162,7 +156,7 @@ pipeline.show()</pre>
 
 
       <h2 class="page-header">Documentation</h4>
-      <p><a herf="http://liorbenhorin.github.io/Pipeline_help/">Visit pipeline online documentation</a></p>
+      <p><a herf="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Visit pipeline online documentation</a></p>
 
 
 
