--- a/index.html
+++ b/index.html
@@ -100,44 +100,13 @@
           <p>Manage all you projects without leaving Maya.</p>
         </div>
       </div>
-    </div>
-    <!--
-      <div class="container">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-          <
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-          </ol>
 
 
-          <div class="carousel-inner" role="listbox">
 
-            <div class="item active">
-              <img class="img-responsive" src="images/versions.png" alt="">
-            </div>
-
-            <div class="item">
-              <img class="img-responsive" src="images/assets.png" alt="" >
-            </div>
-
-            <div class="item">
-              <img class="img-responsive" src="images/ref_bank.png" alt="" >
-            </div>
-
-            <div class="item">
-              <img class="img-responsive" src="images/projects.png" alt="" >
-            </div>
-
-          </div>
-
-        </div>
-      </div> -->
+      <img  class="img-responsive" scr="images/intergration.png" alt="inte">
 
 
-<div class="container pipeline-div-edit" >
+
 
       <a id="version"></a>
       <h2 class="page-header">Beta Version</h2>
