--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
 
-      <img  class="img-responsive" scr="images/intergration.png" alt="inte">
+      <img  class="img-responsive" scr="images/intergration.png" alt="idnte">
 
 
 
