--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
 
 
+
+
       <!-- Main component for a primary marketing message or call to action -->
 
     <div class="jumbotron">
@@ -101,9 +103,7 @@
         </div>
       </div>
 
-
-
-      <img  class="img-responsive" scr="images/intergration.png" alt="idnte">
+      <img class="img-responsive" src="images/intergration.png" alt="logo">
 
 
 
