--- a/index.html
+++ b/index.html
@@ -59,9 +59,6 @@
 
 
 
-
-
-
       <!-- Main component for a primary marketing message or call to action -->
 
     <div class="jumbotron">
@@ -69,13 +66,15 @@
           <img class="img-responsive" src="images/pipeline_logo.png" alt="logo" width="128px" height="128px"></p>
           <h1>Pipeline</h1>
           <p>A simple projects manager for Maya</p>
-          <p><a class="btn btn-lg btn-primary" href="https://github.com/liorbenhorin/pipeline/zipball/master" role="button">Download Pipeline 1.0.0<br><small>Free for non-commercial use</small></a></p>
+          <p><a class="btn btn-lg btn-primary" href="https://github.com/liorbenhorin/pipeline/zipball/master" role="button">Download Pipeline 1.0.0</a></p>
         </div>
     </div> <!-- /container -->
 
 
 
     <div class="container pipeline-div-edit" >
+
+
 
       <h2 class="page-header"><p><a id="features"></a>Features</p></h2>
       <p class='lead'>
@@ -110,23 +109,21 @@
 
       <a id="version"></a>
       <h2 class="page-header">Beta Version</h2>
-      <p class="lead">Pipeline beta is now free for non-commercial use!</p>
-      <p>Things can go wrong so backup your work.<br>
-      You allow the pipeline to collect usage data.</p>
+      <p>Free for non-commerical use.<br>
+      Things can go wrong - backup your work.<br>
+      Pipeline will collect usage data.</p>
 
       <h2 class="page-header"><a id="installation"></a>Installation</h2>
-      <p><a herf="#">Pipeline 1.0.0 Beta Maya 2015, 2016 (Win/OSX)</a></p>
-      <p>Place the pipeline folder <em>( Make sure it is named 'pipeline')</em> in your maya scripts folder.<br>
+      <p><a href="https://github.com/liorbenhorin/pipeline/zipball/master" target="_blank">Pipeline 1.0.0 Beta Maya 2015, 2016 (Win/OSX)</a></p>
+      <p>Place the pipeline folder <em><b>( Make sure it is named 'pipeline')</b></em> in your maya scripts folder.<br>
          Run the following lines in a python tab in the script editor:</p>
       <p>
       <pre>from pipeline import pipeline
 pipeline.show()</pre>
       </p>
 
-
       <h2 class="page-header">Documentation</h4>
-      <p><a herf="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Visit pipeline online documentation</a></p>
-
+      <p><a href="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Visit pipeline online documentation</a></p>
 
 
 
