--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url"                content="http://pipeline.nnl.tv" />
     <meta property="og:title"              content="Pipeline" />
     <meta property="og:description"        content="A simple projects manager for Maya" />
-    <meta property="og:image"              content="images/og.png" />
+    <meta property="og:image"              content="http://pipeline.nnl.tv/images/og.png" />
 
     <link rel="icon" href="images/favicon.png">
 
