--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
+    
+    <meta property="og:image" content="http://pipeline.nnl.tv/images/og.png">
+    <meta property="og:url" content="http://pipeline.nnl.tv">
+    <meta property="og:title" content="Pipeline">
+    <meta property="og:description" content="A simple projects manager for Maya">
 
-    <meta property="og:url"                content="http://pipeline.nnl.tv" />
-    <meta property="og:title"              content="Pipeline" />
-    <meta property="og:description"        content="A simple projects manager for Maya" />
-    <meta property="og:image"              content="http://pipeline.nnl.tv/images/og.png" />
 
     <link rel="icon" href="images/favicon.png">
 
