headr-update-links-remove

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    
+
     <meta property="og:image" content="http://pipeline.nnl.tv/images/og.png">
     <meta property="og:url" content="http://pipeline.nnl.tv">
     <meta property="og:title" content="Pipeline">
@@ -70,10 +70,9 @@
 
     <div class="jumbotron">
         <div class="container">
-          <img class="img-responsive" src="images/pipeline_logo.png" alt="logo" width="128px" height="128px"></p>
-          <h1>Pipeline</h1>
+          <img class="img-responsive" src="images/pipe_gif.gif" alt="logo" width="600px" height="200px"></p>
           <p>A simple projects manager for Maya</p>
-          <p><a class="btn btn-lg btn-primary" href="https://github.com/liorbenhorin/pipeline/zipball/master" role="button">Download Pipeline 1.0.0</a></p>
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">I want Pipeline</a></p>
         </div>
     </div> <!-- /container -->
 
@@ -121,8 +120,7 @@
       Pipeline will collect usage data.</p>
 
       <h2 class="page-header"><a id="installation"></a>Installation</h2>
-      <p><a href="https://github.com/liorbenhorin/pipeline/zipball/master" target="_blank">Pipeline 1.0.0 Beta Maya 2015, 2016 (Win/OSX)</a></p>
-      <p>Place the pipeline folder <em><b>( Make sure it is named 'pipeline')</b></em> in your maya scripts folder.<br>
+      <p>Place the pipeline folder in your maya scripts folder.<br>
          Run the following lines in a python tab in the script editor:</p>
       <p>
       <pre>from pipeline import pipeline
