--- a/index.html
+++ b/index.html
@@ -114,10 +114,16 @@
 
 
       <a id="version"></a>
-      <h2 class="page-header">Beta Version</h2>
-      <p>Free for non-commerical use.<br>
-      Things can go wrong - backup your work.<br>
-      Pipeline will collect usage data.</p>
+      <h2 class="page-header">Version history</h2>
+      <p>1.0.0 - BETA</p>
+      <p>Like any program, it can have some bugs and glitchs,<br>so it's always a good idea to backup your work.<br>
+      During the Beta stage Pipeline is collecting usage statistics.</p>
+
+      <a id="compatibility"></a>
+      <h2 class="page-header">Compatibility</h2>
+      <p>OSX / Windows<br>
+      Maya 2015, 2016, 2016 Ext 2<br>
+      Earlier Versions have not been tested.<br></p>
 
       <h2 class="page-header"><a id="installation"></a>Installation</h2>
       <p>Place the pipeline folder in your maya scripts folder.<br>
