intro-and-some-texts

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div id="navbar" class="navbar-collapse navbar-right collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Documentation</a></li>
+            <!--<li><a href="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Documentation</a></li>-->
             <li><a href="#feedback">Feedback</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -72,7 +72,7 @@
         <div class="container">
           <img class="img-responsive" src="images/pipe_gif.gif" alt="logo" width="600px" height="200px"></p>
           <p>A simple projects manager for Maya</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">I want Pipeline</a></p>
+          <p><a class="btn btn-lg btn-primary" href="#feedback" role="button">Get Pipeline</a></p>
         </div>
     </div> <!-- /container -->
 
@@ -80,12 +80,17 @@
 
     <div class="container pipeline-div-edit" >
 
+      <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://player.vimeo.com/video/168933558?title=0&byline=0&portrait=0" width="800" height="485" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
 
 
       <h2 class="page-header"><p><a id="features"></a>Features</p></h2>
       <p class='lead'>
         Pipeline is a simple and straight forward tool for managing maya projects,<br>
         from student shorts to meduim teams working on commercial projects.
+
+      </p>
+      <p class='lead'>
+        It was inspired by the wonderful OpenPipline script, which appears to be discontinued.
       </p>
 
       <div class="row">
@@ -108,14 +113,15 @@
         </div>
       </div>
 
-      <img class="img-responsive" src="images/intergration.png" alt="logo">
+      <!--<img class="img-responsive" src="images/intergration.png" alt="logo">-->
+
 
 
 
 
       <a id="version"></a>
       <h2 class="page-header">Version history</h2>
-      <p>1.0.0 - BETA</p>
+      <p>1.0.0 - BETA - Free for educational and non commercial use!</p>
       <p>Like any program, it can have some bugs and glitchs,<br>so it's always a good idea to backup your work.<br>
       During the Beta stage Pipeline is collecting usage statistics.</p>
 
@@ -134,32 +140,100 @@ pipeline.show()</pre>
       </p>
 
       <h2 class="page-header">Documentation</h4>
-      <p><a href="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Visit pipeline online documentation</a></p>
-
-
+      <p>The current documentation is work in progress and will be updated soon!</p>
+      <p><a href="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Visit the pipeline documentation</a></p>
 
     </div><!-- /container -->
 
     <div id="feedback" class="container">
       <h2 class="page-header">Feedback and requests</h2></p>
       <!-- Begin MailChimp Signup Form -->
+      <p class="lead">Follow my Gumroad page for release updates:</p>
+      <style>
+        .gumroad-follow-form-embed {
+          zoom: 1; }
+          .gumroad-follow-form-embed:before, .gumroad-follow-form-embed:after {
+            display: table;
+            line-height: 0;
+            content: ""; }
+          .gumroad-follow-form-embed:after {
+            clear: both; }
+          .gumroad-follow-form-embed * {
+            margin: 0;
+            border: 0;
+            padding: 0;
+            outline: 0;
+            box-sizing: border-box !important;
+            float: left !important; }
+          .gumroad-follow-form-embed input {
+            border-radius: 4px;
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+            font-family: -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-size: 15px;
+            line-height: 20px;
+            background: #fff;
+            border: 1px solid #ddd;
+            border-right: 0;
+            color: #aaa;
+            padding: 10px;
+            box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.02);
+            background-position: top right;
+            background-repeat: no-repeat;
+            text-rendering: optimizeLegibility;
+            font-smoothing: antialiased;
+            -webkit-appearance: none;
+            -moz-appearance: caret;
+            width: 65% !important;
+            height: 40px !important; }
+          .gumroad-follow-form-embed button {
+            border-radius: 4px;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+            box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12);
+            -webkit-transition: all .05s ease-in-out;
+            transition: all .05s ease-in-out;
+            display: inline-block;
+            padding: 11px 15px 12px;
+            cursor: pointer;
+            color: #fff;
+            font-size: 15px;
+            line-height: 100%;
+            font-family: -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            background: #36a9ae;
+            border: 1px solid #31989d;
+            filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#5ccfd4, endColorstr=#329ca1, GradientType=0)";
+            background: -webkit-linear-gradient(top, #5ccfd4, #329ca1);
+            background: linear-gradient(to bottom, #5ccfd4, #329ca1);
+            height: 40px !important;
+            width: 35% !important; }
+      </style>
+      <form action="https://gumroad.com/follow_from_embed_form" class="form gumroad-follow-form-embed" method="post">
+      <input name="seller_id" type="hidden" value="9648216897367">
+      <input name="email" placeholder="Your email address" type="email">
+      <button data-custom-highlight-color="" type="submit">Follow</button>
+      </form>
 
-      <p class="lead">Sign up for release updates:</p>
+
+      <!--
       <form action="//nnl.us13.list-manage.com/subscribe/post?u=879fb8f252168589edce47432&amp;id=a626001b48" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div class="input-group input-group-lg">
               <input type="email" value="" name="EMAIL" class="form-control email" id="mce-EMAIL" placeholder="email address" required>
+            -->
               <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+<!--
               <div style="position: absolute; left: -5000px;"><input type="text" name="b_879fb8f252168589edce47432_a626001b48" tabindex="-1" value=""></div>
               <span class="input-group-btn">
                   <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default">
               </span>
           </div>
-      </form>
+      </form> -->
 
       <!--End mc_embed_signup-->
 
       <p></p>
-      <p>If you are interested in using Pipeline for commercial projects, or to create a custom Pipeline for your studio, email me at liorbenhorin@gmail.com</p>
+      <p>Ask me anything about Pipeline or just say hello at liorbenhorin@gmail.com</p>
+      <!--<p>If you are interested in using Pipeline for commercial projects, or to create a custom Pipeline for your studio, email me at liorbenhorin@gmail.com</p>-->
 
     </div>
     <div class = "container" id="disqus_thread"></div><!--/ disqus -->
