--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <meta property="og:image" content="http://pipeline.nnl.tv/images/og.png">
+    <meta property="og:image" content="http://pipeline.nnl.tv/images/og-image.png">
     <meta property="og:url" content="http://pipeline.nnl.tv">
     <meta property="og:title" content="Pipeline">
     <meta property="og:description" content="A simple projects manager for Maya">
