--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <div class="container">
           <img class="img-responsive" src="images/pipe_gif.gif" alt="logo" width="600px" height="200px"></p>
           <p>A simple projects manager for Maya</p>
-          <p><a class="btn btn-lg btn-primary" href="#feedback" role="button">Get Pipeline</a></p>
+          <script src="https://gumroad.com/js/gumroad.js"></script>
+          <a class="gumroad-button" href="https://gum.co/pipeline" target="_blank">Get Pipeline</a>
+          <!--<p><a class="btn btn-lg btn-primary" href="#feedback" role="button">Get Pipeline</a></p>-->
         </div>
     </div> <!-- /container -->
 
